# orthos

./: .gitignore  Cargo.toml  IDEA.md  LICENSE  README.md
data/: dataset-registry.json
data/grammar/: verb_government.false_positive.tsv  verb_government.fixture_morph.tsv  verb_government.fixtures.tsv  verb_government.seed.tsv
data/lexicon/: demo_morph.tsv
data/morphemes/: README.md  ru_derivational_morphemes.seed.tsv
docs/: ARCHITECTURE.md  CLI_USAGE.md  DATASETS.md  EVALUATION.md  corpus-design.md  debug-layer.md  engine-architecture.md  evaluation-methodology.md  morph-dictionaries.md  morphology.md  roadmap.md  rule-authoring-guide.md  rule-model.md  rule-taxonomy.md  solid-architecture.md  sources.md  syntax-architecture.md  syntax-patterns.md
docs/data/: morpheme-seed.md
docs/language-model/: 01-word-formation-model.md  02-agreement-model.md  (+9 more)
examples/: bad.txt
rules/: 00-basic.yaml  05-donor-surface.yaml  10-orthography.yaml  15-donor-orthography.yaml  16-orthography-common-seeds.yaml  17-hyphenated-particles-prepositions-seeds.yaml  18-clitic-negation-seeds.yaml  30-grammar.yaml  31-nominal-groups.yaml  35-donor-grammar-style.yaml  36-grammar-style-expanded-seeds.yaml  45-document-context.yaml  90-roadmap-ruslint.yaml
src/: analysis.rs  corpus.rs  debug.rs  detector.rs  engine.rs  issue.rs  lib.rs  main.rs  morph.rs  syntax.rs  text.rs
tests/: basic.rs  corpus_examples.rs  corpus_metadata.rs  dataset_regressions.rs  debug_layer.rs  engine_platform.rs  model_backed_rules.rs  morphology.rs  syntax_punctuation.rs  test_importers.py
(+203 files in other folders)
