[package]
name = "orthos"
version = "0.1.0"
edition = "2024"
description = "Rule-based Russian spelling, punctuation and grammar checker prototype"
license-file = "LICENSE"
rust-version = "1.91"

[lib]
name = "orthos"
path = "src/lib.rs"

[[bin]]
name = "orthos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
walkdir = "2.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
